[tool.poetry]
name = "aiospamc"
version = "1.1.0"
description = "An asyncio-based library to communicate with SpamAssassin's SPAMD service."
authors = ["Michael Caley <mjcaley@darkarctic.com>"]
license = "MIT"
readme = "README.rst"

repository = "https://github.com/mjcaley/aiospamc"
homepage = "https://github.com/mjcaley/aiospamc"
documentation = "https://aiospamc.readthedocs.io"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Topic :: Communications :: Email :: Filters'
]

keywords = ["spam", "spamc", "spamassassin"]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "*"
loguru = "^0.7.0"
typer = ">=0.9,<0.13"

[tool.poetry.scripts]
aiospamc = "aiospamc.cli:app"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1,<9.0"
pytest-cov = ">=4,<6"
pytest-asyncio = ">=0.21,<0.25"
pytest-mock = "^3.10"
coverage = {extras = ["toml"], version = "^7.2"}
trustme = "^1.1"
cryptography = "^43.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
markers = ["integration: spawn an instance of spamd and test against it"]
addopts = "-m \"not integration\""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["aiospamc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__"
]
fail_under = 95.0


[tool.poetry.group.docs.dependencies]
sphinx = ">=6.2,<8.0"
sphinx-rtd-theme = ">=1.3,<4.0"
sphinx-toolbox = "^3.4"
reno = "^4.0"


[tool.poetry.group.quality.dependencies]
mypy = "^1.2"
black = ">=23,<25"
interrogate = "^1.5"
isort = "^5.12"
pre-commit = ">=3.2,<5.0"

[tool.black]
target-version = ["py38"]
exclude = """
    utils |
    docs |
    example
"""

[tool.interrogate]
ignore-magic = true
fail-under = 95
exclude = ["changes", "docs", "example", "test", "util"]

[tool.isort]
profile = "black"
src_paths = ["aiospamc", "tests"]


[tool.poetry.group.mgmt.dependencies]
tbump = "^6.10"

[tool.tbump]
github_url = "https://github.com/mjcaley/aiospamc/"

[tool.tbump.version]
current = "1.1.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "aiospamc/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
