[project]
name = "aiospamc"
version = "1.1.1"
description = "An asyncio-based library to communicate with SpamAssassin's SPAMD service."
authors = [
    {name = "Michael Caley", email = "mjcaley@darkarctic.com"}
]
license = "MIT"
readme = "README.rst"

repository = "https://github.com/mjcaley/aiospamc"
homepage = "https://github.com/mjcaley/aiospamc"
documentation = "https://aiospamc.readthedocs.io"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Topic :: Communications :: Email :: Filters'
]

keywords = ["spam", "spamc", "spamassassin"]

requires-python = ">= 3.9, < 4.0"

dependencies = [
    "certifi",
    "loguru >=0.7",
    "typer >=0.9,<0.16"
]

[tool.poetry.group.test.dependencies]
pytest = ">=7.1,<9.0"
pytest-cov = ">=4,<7"
pytest-asyncio = ">=0.21,<1.1"
pytest-mock = "^3.14"
coverage = {extras = ["toml"], version = "^7.9"}
trustme = "^1.1"
cryptography = "^43.0"

[project.scripts]
aiospamc = "aiospamc.cli:app"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
markers = ["integration: spawn an instance of spamd and test against it"]
addopts = "-m \"not integration\""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["aiospamc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__"
]
fail_under = 95.0


[tool.poetry.group.docs.dependencies]
sphinx = ">=6.2,<8.0"
sphinx-rtd-theme = ">=1.3,<4.0"
sphinx-toolbox = "^4.0"
reno = "^4.0"


[tool.poetry.group.quality.dependencies]
mypy = "^1.2"
black = ">=25,<26"
interrogate = "^1.5"
isort = "^6.0.0"
pre-commit = ">=3.2,<5.0"

[tool.black]
target-version = ["py38"]
exclude = """
    utils |
    docs |
    example
"""

[tool.interrogate]
ignore-magic = true
fail-under = 95
exclude = ["changes", "docs", "example", "test", "util"]

[tool.isort]
profile = "black"
src_paths = ["aiospamc", "tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
