[project]
name = "aiospamc"
version = "1.2.0"
description = "An asyncio-based library to communicate with SpamAssassin's SPAMD service."
authors = [
    {name = "Michael Caley", email = "mjcaley@darkarctic.com"}
]
license = "MIT"
readme = "README.rst"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Topic :: Communications :: Email :: Filters'
]
keywords = ["spam", "spamc", "spamassassin"]
requires-python = ">= 3.10, < 4.0"

dependencies = [
    "certifi",
    "loguru >=0.7",
    "typer >=0.13,<0.17"
]

[project.urls]
repository = "https://github.com/mjcaley/aiospamc"
homepage = "https://github.com/mjcaley/aiospamc"
documentation = "https://aiospamc.readthedocs.io"

[project.scripts]
aiospamc = "aiospamc.cli:app"

[dependency-groups]
test = [
    "pytest >=7.1,<9.0",
    "pytest-cov >=4,<7",
    "pytest-asyncio >=0.21,<1.1",
    "pytest-mock >=3.14,<4.0",
    "coverage[toml] >=7.9,<8.0",
    "trustme >=1.1,<2.0",
    "cryptography >=43.0,<46.0"
]
docs = [
    "sphinx >=6.2,<8.0",
    "sphinx-rtd-theme >=1.3,<4.0",
    "sphinx-toolbox >=4.0,<5.0",
    "reno >=4.0,<5.0",
]
quality = [
    "mypy >=1.16",
    "interrogate >=1.5",
    "pre-commit >=3.2,<5.0",
    "ruff>=0.12.0",
]

[tool.uv]
default-groups = ["test", "docs", "quality"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
markers = ["integration: spawn an instance of spamd and test against it"]
addopts = "-m \"not integration\""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["aiospamc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__"
]
fail_under = 95.0

[tool.ruff]
target-version = "py39"
exclude = ["docs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.interrogate]
ignore-magic = true
fail-under = 95
exclude = ["changes", "docs", "example", "test", "util"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
